fix scrollbar only for large  screen

--- a/css/custom.css
+++ b/css/custom.css
@@ -338,16 +338,24 @@ svg.svg_rhombus_customizer use.clickable:hover {
 
 #timbers_grouped_by_face_svg_container {
     width: 300px;
-    max-height: 1200px;
-    overflow-y: auto;
 }
-
 
 #timber_profiles_svg_container {
     width: 800px;
-    max-height: 1200px;
-    overflow-y: auto;
 }
+
+@media screen and (min-width: 992px) {
+    #timbers_grouped_by_face_svg_container {
+        max-height: 1200px;
+        overflow-y: auto;
+    }
+
+    #timber_profiles_svg_container {
+        max-height: 1200px;
+        overflow-y: auto;
+    }
+}
+
 
 #timbers_grouped_by_face_svg_container > div > svg,
 #timber_profiles_svg_container > div > svg {
